# Proyecto1_P2_ddaw

./: README.md  main.py  pyproject.toml  requirements.txt
models/: empleado.py  nomina.py  novedad.py
pruebas/: run_tests.py  verificacion_y_validacion.md
